Type-safe Configuration Properties

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,3 +6,17 @@ spring:
       bitdepth: 8
       width: 100
       height: 15
+
+my.service:
+  enabled: false
+  remote-address: 192.168.0.1
+  security:
+    username: soohoonlee
+    password: 821126
+    roles:
+      - ADMIN
+      - USER
+    attrs:
+      hasWriteAuthority: false
+      hasReadAuthority: true
+      hasDeleteAuthority: false
