--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,14 @@
 spring:
+  profiles:
+    active:
+      - local
+    include:
+      - db
+      - my-service
+      - site
+    group:
+      local: "site-local,db-local"
+      dev: "site-dev"
   main:
     banner-mode: off
   banner:
@@ -6,17 +16,3 @@ spring:
       bitdepth: 8
       width: 100
       height: 15
-
-my.service:
-  enabled: false
-  remote-address: 192.168.0.1
-  security:
-    username: soohoonlee
-    password: 821126
-    roles:
-      - ADMIN
-      - USER
-    attrs:
-      hasWriteAuthority: false
-      hasReadAuthority: true
-      hasDeleteAuthority: false
