--- a/src/main/resources/application-db.yml
+++ b/src/main/resources/application-db.yml
@@ -35,6 +35,16 @@ spring:
       jdbc-url: jdbc:h2:mem:divelog;MODE=MySQL;DATABASE_TO_UPPER=FALSE;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;
       username: sa
       password:
+#
+#  sql:
+#    init:
+#      mode: always
+#  flyway:
+#    enabled: true
+#    baseline-on-migrate: true
+#    url: jdbc:h2:mem:divelog;MODE=MySQL;DATABASE_TO_UPPER=FALSE;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;
+#    user: sa
+#    password:
 
 ---
 spring:
