--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,3 +16,7 @@ spring:
       bitdepth: 8
       width: 100
       height: 15
+#  mvc:
+#    static-path-pattern: /resources/**
+  messages:
+    basename: classpath:/messages
